<resources>
    <string name="app_name">theClient</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="the_client">theClient</string>
    <string name="termsOfUse">I agree with terms of use</string>
    <string name="login">Log in</string>
    <string name="repoName">repoName</string>
    <string name="title_activity_repository">RepositoryActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repoPath">repo path</string>
    <string name="created_at">Created at:</string>
    <string name="log_out">Log Out</string>
    <string name="textView">TextView</string>
    <string name="name">name</string>
    <string name="back">back</string>
    <string name="home">home</string>
    <string name="welcome_phrase">You are about login to your GitHub account!</string>
    <string name="message">message</string>
    <string name="author_name">author name</string>
    <string name="date_of_commit">date of commit</string>
    <string name="date_of_creation_pull_request">date of creation pull request</string>
    <string name="pull_request_image">pull request image</string>
    <string name="no_pull_requests_at_this_moment">No pull requests at this moment</string>
    <string name="repo_description">repo description</string>
    <string name="language">language</string>
    <string name="liked_repo">Liked/Not-liked repository</string>
</resources>
