<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/messageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/authorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author_name"/>

            <TextView
                android:id="@+id/dateTextView"
                android:text="@string/date_of_commit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />



        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>